styles/style.css
* {
  box-sizing: border-box;
}

html {
  /* position: fixed; */
}

body {
  min-height: 100vh;
  width: 100vw;
  padding: 18px 0 0 18px;
  /* background-color: rgb(214, 203, 214); */
  background-color: rgb(50,0,50);
}

.bg-arc {
  min-height: 100vh;
  width: 100%;
  
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  /* overflow-y: scroll; */
  /* overflow-x: hidden; */

  border: 2px solid rgb(50, 0, 50);
  border-top-left-radius: 45px;
  z-index: 20;
  box-shadow: 
  -3px -3px   rgb(35, 200, 225),
  -3px -0px   rgb(35, 200, 225),
   0px -3px   rgb(35, 200, 225),
  -6px -6px rgb(50, 0, 50), 
  -6px -0px rgb(50, 0, 50), 
  0px -6px rgb(50, 0, 50), 
  
  -9px -9px rgb(35, 200, 225),
  0px -9px rgb(35, 200, 225),
  -9px 0px rgb(35, 200, 225),

  -12px -12px rgb(50, 0, 50), 
  -12px -0px rgb(50, 0, 50), 
  0px -12px rgb(50, 0, 50), 

  -15px -15px rgb(35, 200, 225),
  0px -15px rgb(35, 200, 225),
  -15px 0px rgb(35, 200, 225),

  
  -50px -50px rgb(50, 0, 50),
  -50px -0px rgb(50, 0, 50),
  -0px -50px rgb(50, 0, 50);
}

header {
  width: 100%;
  height: 80vh;
  /* display: flex; */
  flex-wrap: wrap;
  margin-bottom: 20px;
  position: relative;
}

.logo {
  width: 100%;
  margin: 20% 0;
}

h1, h2 {
  margin: 0;
  font-family: 'Atomic Age', 'Helvetica', sans-serif;
}

.dev-jaq {
  color: rgb(250, 235, 240);
  font-size: 75px;
  text-shadow: 
  0px -1px rgb(50, 0, 50),
  -1px 0px rgb(50, 0, 50),
  -1px -1px rgb(50, 0, 50),

  0px 3px rgb(50, 0, 50),
  3px 0px rgb(50, 0, 50),
  3px 3px rgb(50, 0, 50),

  0px 5px rgb(50, 0, 50),
  5px 0px rgb(50, 0, 50),
  5px 5px rgb(50, 0, 50),

  0 0 2px rgb(250, 235, 240),
  0px 0px 5px rgb(200, 60, 165),
  0px 0px 10px rgb(200, 60, 165),
  0px 0px 50px rgb(200, 60, 165),
  50px 10px 150px rgb(200, 60, 165);
  /* right: 20px; */
  /* text-align: right; */
  text-align: center;
}

.myname {
  width: 100%;
  color: rgb(165, 25, 130);
  color: rgb(200, 60, 165);
  font-size: 39px;
  /* text-align: right; */
  text-align: center;

}

#raison {
  min-width: 310px;
  width: 100%;
  /* display: none; */
  color: white;

  font-family: "Roboto Mono", sans-serif;
  /* color: rgb(30,20,46); */
  font-size: 24px;
  text-align: center;

  /* border: 6px solid transparent;
  border-image: linear-gradient(225deg, rgb(201, 95, 118) 30% , mistyrose);
  border-image-slice: 1; */
}

#raison p {
  margin: 0;
  /* margin: 0 20px 0 0; */
  /* text-align: center; */
}

.social {
  width: 100%;
  display: flex;
  justify-content: space-around;
  /* margin: 0 auto 10px auto; */
  padding: 0 25px;
  /* padding-right: 20px; */
  text-align: center;
  /* text-align: right; */
  position: absolute;
  bottom: 0px;
}

.social a {
  /* margin: 5px; */
}

ng-view {
  width: 100%;
}

main {
  /* max-height: 320px; */
  min-width: 310px;
  margin-right: 30px;
  /* overflow-y: scroll; */
  box-shadow:  -1px 0 0 transparent ,2px 2px 100px #111, 0 0 25px #111
  /* , 0 0 20px rgb(35, 200, 225)
  , 0 0 20px rgb(35, 200, 225)
  ,  0 0 35px rgb(35, 200, 225) */
  ;
  border-bottom-right-radius: 50px;
  clip-path: inset(-100px -100px -100px 0px);
}

main::before {
  box-shadow: none;
}

.content {
  min-height: 200px;
  min-width: 310px;
  width: 100%;

  padding: 15px;
  padding-right: 50px;
  background-color: rgba(247, 235, 250, 0.9);

  border-bottom-right-radius: 50px;
}

a {
  color: rgb(200, 60, 165);
}

a:hover{
  color: rgb(35, 200, 225);
  text-decoration: none;
}

footer {
  width: 100%;
  /* height: 80px; */
  margin-top: 20px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  position: relative;

  bottom: 0;
  /* padding: 0 10px; */
  font-family: 'Roboto Mono', monospace;
}
nav {
  max-width: 500px;
  min-height: 100px;
  padding-right: 20px;
  
  display: flex;
  justify-content: center;
  align-items: flex-end;

  /* position: absolute; */
  bottom: 0;

  margin: 0 auto;
}

footer a {
  box-sizing: content-box;
  width: 65px;
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;

  margin: 5px;
  border: 2px solid rgb(165, 25, 130);
  /* border-left: 4px solid rgb(165, 25, 130); */
  border-right: 4px solid rgb(165, 25, 130);
  border-bottom: 6px solid rgb(165, 25, 130);
  border-radius: 500px;
  padding: 3px 0px;

  background-color:rgba(247, 235, 250, 0.9);

  color: rgb(30,20,46);
  font-size: .9rem;
  text-align: center;
  text-decoration: none;
}

footer a:hover {
  background-color: rgb(224, 183, 197);
  color: #000;
}

footer a:active {
  border-right: 2px solid rgb(202, 59, 90);
  border-bottom: 2px solid rgb(202, 59, 90);
}

#footer li , #footer a {
  text-decoration: none;
  list-style-type: none;
  margin: 0;
  padding: 0;
  color: #000000;
}

.resume {
  width: 100%;
  min-height: 600px;
}

/****************************************/

@media only screen and (min-width: 768px) {
  header {
    /* height: 120px; */
    /* width: 100%; */
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;

    /* background-color: rgb(50, 0, 50); */
  }

  .logo {
    /* width: 45%; */
  }

  #raison {
    /* display: flex; */
    max-height: none;
    width: 45%;
    display: inline-block;

    margin: 0;
    border: none;
    border-radius: 0px;

    box-shadow: none;
    background: none;

    color: rgb(250, 235, 240);
    /* font-size: 18px; */
    /* text-align: right; */
  }

  main {
    margin: 0 auto;
    max-width: 600px; 
    border-radius: 50px;
    border-top-right-radius: 0;
    clip-path: none;
  }

  .content {
    max-height: none;
    margin: 0;
    border-radius: 50px;
    border-top-right-radius: 0;
    padding: 20px;
  }
}

@media only screen and (min-width: 1200px) {
  
}

